--- a/neural_network/CMakeLists.txt
+++ b/neural_network/CMakeLists.txt
@@ -1,14 +1,14 @@
 cmake_minimum_required(VERSION 3.16)
-project(NeuralNetwork)
+project(nn_main)
 
 set(CMAKE_C_STANDARD 11)
 
 add_executable(
-        NeuralNetwork
+        nn_main
         train.c
         ../Action.c
         ../Board.c
         ../Game.c
         ../gamedef.c)
 
-target_link_libraries(NeuralNetwork PRIVATE m)
+target_link_libraries(nn_main PRIVATE m)
