added Hash.c & Hash.h

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,4 +13,6 @@ add_executable(
         Game.c
         Game.h
         gamedef.c
-        gamedef.h)
+        gamedef.h
+        Hash.c
+        Hash.h)
